# avai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  av-features.md  dashboard.py  docker-compose.yml  host_monitor.py  host_monitor_prompts.toml  pyproject.toml
docs/: ARCHITECTURE.md  REFACTOR_PLAN.md
landing-page/: index.html  robots.txt  sitemap.xml
landing-page/.do/: app.yaml
landing-page/docs/: index.html
src/avai/: __init__.py  cli.py  dashboard.py  db_migrate.py  host_monitor.py  prompts.toml
src/avai/dashboard/: __init__.py  app.py  control.py  queries.py  serve.py
src/avai/enrichers/: __init__.py  base.py  cache.py  chain.py  http.py  indicators.py  registry.py
src/avai/enrichers/sources/: __init__.py  abuseipdb.py  circl_hashlookup.py  cisa_kev.py  crtsh.py  endoflife.py  feodo_tracker.py  github_advisory.py  greynoise.py  ipwhois_geo.py  malware_bazaar.py  nvd.py  osv.py  phishtank.py  safe_browsing.py  shodan_internetdb.py  threatfox.py  urlhaus.py  virustotal.py
src/avai/host_monitor/: __init__.py  collectors.py  constants.py  enums.py  exposure_collectors.py  judge.py  main.py  models.py  narrator.py  net_collectors.py  persistence_collectors.py  prompts.py  risk.py  runner.py  shell.py  sink.py  streaming.py
src/avai/host_monitor/hosts/: __init__.py  capabilities.py  factory.py  linux.py  macos.py  windows.py
src/avai/host_monitor/runtime/: __init__.py  clock.py  coerce.py  command_runner.py  digest.py  host_paths.py  probes.py  row_source.py  sqlite_reader.py  stream_source.py
src/avai/migrations/: env.py
src/avai/migrations/versions/: 0001_baseline.py  0002_perf_indexes.py  0003_control_state.py  0004_host_resources.py
src/avai/templates/: dashboard.html
src/avai/templates/partials/: _auth_events.html  _collection.html  _control.html  _dns_queries.html  _errors.html  _findings.html  (+17 more)
templates/: dashboard.html
templates/partials/: _errors.html  _findings.html  _overview.html  _runs.html  _sysint.html
tests/: local.sh  test_browser_readers.py  test_cli.py  test_collectors.py  test_dashboard.py  test_enricher_sources.py  test_enrichers.py  test_exposure_collectors.py  test_host_monitor.py  test_hosts.py  test_http.py  test_indicators_edge.py  test_integration.py  test_judge_auth.py  test_listening_ports.py  test_llm_judge.py  test_migrations.py  test_misc_helpers.py  test_more_sources.py  test_net_collectors.py  test_network_flows.py  test_new_collectors.py  test_persistence_collectors.py  test_registry.py  test_resources.py  test_row_source.py  test_runner.py  test_runtime.py  test_sink_rotation.py  test_stream_parsers.py  test_streaming_worker.py  test_windows.py
tools/: fill_demo.sh  seed_demo_db.py
